--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ room = "2.8.4"
 coroutines = "1.10.2"
 lifecycleViewModelCompose = "2.9.2"
 ksp = "2.2.10-2.0.2"
-powersync = "1.7.0"
+powersync = "1.10.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +36,8 @@ androidx-room-compiler = { group = "androidx.room", name = "room-compiler", vers
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewModelCompose" }
 powersync-core = { module = "com.powersync:core", version.ref = "powersync" }
 powersync-room = { module = "com.powersync:integration-room", version.ref = "powersync" }
+powersync-core-android = { module = "com.powersync:core-android", version.ref = "powersync" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
